mid-junk-commit

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "^3.3.7",
     "jquery-resizable": "^0.20.0",
     "ace-builds": "^1.2.6",
-    "normalize-css": "^6.0.0"
+    "normalize-css": "^6.0.0",
+    "font-awesome": "^4.7.0"
   }
 }
