--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "nikhil",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "bower": "~1.8.0",
     "ejs": "^2.5.6",
     "ejs-locals": "^1.0.2",
     "express": "^4.15.2",
     "react": "~15.4.2",
-    "react-dom": "~15.4.2"
+    "react-dom": "~15.4.2",
+    "tmp": "0.0.31"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
