--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "chapel",
   "description": "online compiler for chapel",
-  "main": "index.js",
+  "main": "app.js",
   "authors": [
     "nikhil"
   ],
@@ -17,6 +17,8 @@
     "jquery-resizable": "^0.20.0",
     "ace-builds": "^1.2.6",
     "normalize-css": "^6.0.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "socket.io-client": "^1.7.2",
+    "socket.io": "^1.7.3"
   }
 }
