--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chapel",
   "version": "1.0.0",
   "description": "online compiler for chapel",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,12 +15,13 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "bower": "~1.8.0",
+    "dockerode": "^2.4.2",
     "ejs": "^2.5.6",
     "ejs-locals": "^1.0.2",
     "express": "^4.15.2",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
-    "tmp": "0.0.31"
+    "socket.io": "^1.7.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
